# melior

./: Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: document.yaml
examples/: readme.rs
melior_next/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Context.html  struct.ContextRef.html  struct.ExecutionEngine.html  struct.LogicalResult.html  struct.StringRef.html
melior_next/context/: struct.Context.html  struct.ContextRef.html
melior_next/diagnostics/: enum.DiagnosticSeverity.html  index.html  sidebar-items.js  struct.Diagnostic.html  struct.DiagnosticHandler.html
melior_next/dialect/: index.html  sidebar-items.js  struct.Dialect.html  struct.Handle.html  struct.Registry.html
melior_next/error/: enum.Error.html
melior_next/execution_engine/: struct.ExecutionEngine.html
melior_next/ir/: index.html  sidebar-items.js  struct.AffineMap.html  struct.Attribute.html  struct.Identifier.html  struct.Location.html  struct.Module.html  struct.Region.html  struct.RegionRef.html  struct.Value.html  trait.TypeLike.html  trait.ValueLike.html
melior_next/logical_result/: struct.LogicalResult.html
melior_next/pass/: index.html  struct.Manager.html  struct.OperationManager.html  struct.Pass.html
melior_next/string_ref/: struct.StringRef.html
melior_next/utility/: fn.parse_pass_pipeline.html  fn.register_all_dialects.html  fn.register_all_llvm_translations.html  fn.register_all_passes.html  index.html
src/: context.rs  diagnostics.rs  dialect.rs  error.rs  execution_engine.rs  ir.rs  lib.rs  logical_result.rs  pass.rs  string_ref.rs  utility.rs
src/dialect/: arith.rs  cf.rs  handle.rs  registry.rs
src/ir/: attribute.rs  block.rs  identifier.rs  type.rs  (+6 more)
(+228 files in other folders)
