[package]
name = "melior-next"
description = "The rustic MLIR bindings in Rust. Continued."
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/edg-l/melior-next"
documentation = "https://edg-l.github.io/melior-next/melior-next/"

[dependencies]
mlir-sys = "0.1"
once_cell = "1"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.28.0"
pretty_assertions = "1.3.0"
