[package]
name = "melior-next"
description = "The rustic MLIR bindings in Rust. Continued."
version = "0.4.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/edg-l/melior-next"
documentation = "https://edg-l.github.io/melior-next"

[features]

# if MLIR was compiled with MLIR_ENABLE_CUDA_RUNNER, it requires linking cuda, enable this then.
# experimental support, libcuda.so must be in a common lib path such as /usr/lib
cuda = []

[dependencies]
once_cell = "1"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.28.0"
pretty_assertions = "1.3.0"

[build-dependencies]
bindgen = "0.64.0"
